--- a/publish.css
+++ b/publish.css
@@ -833,11 +833,37 @@ body {
   border: none;
   border-inline-start: var(--blockquote-border-thickness) solid rgb(var(--callout-color));
 }
-.fas-callout-cite-alt .callout[data-callout~=cite] .callout-title,
-.fas-callout-cite-alt .callout[data-callout~=quote] .callout-title,
-.callout[data-callout~=cite-fas] .callout-title,
-.callout[data-callout~=quote-fas] .callout-title {
+.fas-callout-cite-alt .callout[data-callout~=cite]:not(.is-collapsible) .callout-title,
+.fas-callout-cite-alt .callout[data-callout~=quote]:not(.is-collapsible) .callout-title,
+.callout[data-callout~=cite-fas]:not(.is-collapsible) .callout-title,
+.callout[data-callout~=quote-fas]:not(.is-collapsible) .callout-title {
   display: none;
+}
+.fas-callout-cite-alt .callout[data-callout~=cite].is-collapsible,
+.fas-callout-cite-alt .callout[data-callout~=quote].is-collapsible,
+.callout[data-callout~=cite-fas].is-collapsible,
+.callout[data-callout~=quote-fas].is-collapsible {
+  display: flex;
+  flex-direction: column-reverse;
+}
+.fas-callout-cite-alt .callout[data-callout~=cite].is-collapsible .callout-title,
+.fas-callout-cite-alt .callout[data-callout~=quote].is-collapsible .callout-title,
+.callout[data-callout~=cite-fas].is-collapsible .callout-title,
+.callout[data-callout~=quote-fas].is-collapsible .callout-title {
+  background: none;
+  justify-content: flex-end;
+}
+.fas-callout-cite-alt .callout[data-callout~=cite].is-collapsible .callout-icon,
+.fas-callout-cite-alt .callout[data-callout~=quote].is-collapsible .callout-icon,
+.callout[data-callout~=cite-fas].is-collapsible .callout-icon,
+.callout[data-callout~=quote-fas].is-collapsible .callout-icon {
+  display: none;
+}
+.fas-callout-cite-alt .callout[data-callout~=cite].is-collapsible .callout-title-inner::before,
+.fas-callout-cite-alt .callout[data-callout~=quote].is-collapsible .callout-title-inner::before,
+.callout[data-callout~=cite-fas].is-collapsible .callout-title-inner::before,
+.callout[data-callout~=quote-fas].is-collapsible .callout-title-inner::before {
+  content: "~ ";
 }
 .fas-callout-cite-alt .callout[data-callout~=cite] .callout-content,
 .fas-callout-cite-alt .callout[data-callout~=quote] .callout-content,
