--- a/scss/editor/code/_code_styling.scss
+++ b/scss/editor/code/_code_styling.scss
@@ -3,7 +3,7 @@ body {
 }
 
 @container style(--limit-code-to-80-chars: enable) {
-    code {
+    pre code {
         max-width: 80ch;
         display: block;
     }
