Add compatibility between image converter plugin and infobox callout

--- a/scss/plugins/community/_image-converter.scss
+++ b/scss/plugins/community/_image-converter.scss
@@ -1,3 +1,33 @@
 body.image-captions-enabled .image-embed[alt]::after {
     font-size: calc(var(--font-text-size) * 0.875);
 }
+
+body.image-captions-enabled :where(.fas-callout-infobox) .callout[data-callout="infobox"],
+body.image-captions-enabled .callout[data-callout="fas-infobox"] {
+    .image-embed[alt~="icon"] {
+        display: block !important;
+        width: var(--infobox-icon-size, 70px);
+
+        &::after {
+            content: none;
+        }
+    }
+
+    img[alt~="icon"] {
+        height: var(--infobox-icon-size, 70px);
+    }
+
+    .image-embed[alt~="cover"] {
+        display: unset !important;
+
+        &::after {
+            font-size: 0;
+            width: unset;
+            padding: unset;
+        }
+    }
+
+    img[alt~="cover"] {
+        max-width: unset;
+    }
+}
