Add clear callout metadata

--- a/scss/editor/callouts/_callouts-metadata.scss
+++ b/scss/editor/callouts/_callouts-metadata.scss
@@ -119,6 +119,10 @@
     max-width: 300px;
 }
 
+.callout[data-callout-metadata~="clear"] {
+    clear: both;
+}
+
 .callout[data-callout-metadata~="no-blending"] {
     --callout-blend-mode: normal;
 }
