Fix infobox cover and icon

--- a/publish.css
+++ b/publish.css
@@ -1753,11 +1753,13 @@ body {
 :where(.fas-callout-infobox) .callout[data-callout=infobox] .image-embed[alt~=cover],
 .callout[data-callout=fas-infobox] .image-embed[alt~=cover] {
   position: relative;
+  display: block;
 }
 :where(.fas-callout-infobox) .callout[data-callout=infobox] .image-embed[alt~=cover]::after,
 .callout[data-callout=fas-infobox] .image-embed[alt~=cover]::after {
   --triangle-size: 16px;
   content: "";
+  display: block;
   position: absolute;
   bottom: calc(-0.5 * var(--triangle-size));
   left: calc(50% - 0.5 * var(--triangle-size));
@@ -1781,13 +1783,23 @@ body {
   width: var(--infobox-icon-size, 70px);
   margin-top: calc(-0.5 * var(--infobox-icon-size, 70px));
   margin-bottom: calc(-0.5 * var(--infobox-icon-size, 70px));
+  z-index: 2;
+}
+:where(.fas-callout-infobox) .callout[data-callout=infobox] p + p > .image-embed[alt~=icon],
+.callout[data-callout=fas-infobox] p + p > .image-embed[alt~=icon] {
+  margin-top: calc(-0.5 * var(--infobox-icon-size, 70px) - var(--p-spacing));
 }
 :where(.fas-callout-infobox) .callout[data-callout=infobox] img[alt*=icon]:not(.image-embed img),
 .callout[data-callout=fas-infobox] img[alt*=icon]:not(.image-embed img) {
   display: block;
   position: relative;
+  margin-top: calc(-0.5 * var(--infobox-icon-size, 70px));
+  margin-bottom: calc(-0.5 * var(--infobox-icon-size, 70px));
+  z-index: 2;
+}
+:where(.fas-callout-infobox) .callout[data-callout=infobox] p + p > img[alt*=icon]:not(.image-embed img),
+.callout[data-callout=fas-infobox] p + p > img[alt*=icon]:not(.image-embed img) {
   margin-top: calc(-0.5 * var(--infobox-icon-size, 70px) - var(--p-spacing));
-  margin-bottom: calc(-0.5 * var(--infobox-icon-size, 70px) - var(--p-spacing));
 }
 :where(.fas-callout-infobox) .callout[data-callout=infobox] img[alt*=icon],
 .callout[data-callout=fas-infobox] img[alt*=icon] {
