--- a/scss/skins/_art-deco.scss
+++ b/scss/skins/_art-deco.scss
@@ -283,6 +283,7 @@
         mask-size: 100%;
         mask-repeat: no-repeat;
         mask-position: bottom left;
+        z-index: -1;
     }
 }
 
