--- a/scss/plugins/community/_image-converter.scss
+++ b/scss/plugins/community/_image-converter.scss
@@ -18,7 +18,7 @@ body.image-captions-enabled .callout[data-callout="fas-infobox"] {
     }
 
     .image-embed[alt~="cover"] {
-        display: unset !important;
+        display: block !important;
 
         &::after {
             font-size: 0;
