Default tabs style correctly set to flat

--- a/scss/_style-settings.scss
+++ b/scss/_style-settings.scss
@@ -325,7 +325,7 @@ settings:
         id: fas-bookmark-tabs
         title: Bookmark style for the tabs
         type: variable-select
-        default: disable
+        default: flat
         options:
             - 
                 label: Disable
