--- a/scss/editor/callouts/_callouts-metadata.scss
+++ b/scss/editor/callouts/_callouts-metadata.scss
@@ -133,3 +133,9 @@
         text-align: center;
     }
 }
+
+.callout[data-callout-metadata~="table-fixed"] {
+    table {
+        table-layout: fixed;
+    }
+}
