--- a/snippets/cssclasses/sci-fi.css
+++ b/snippets/cssclasses/sci-fi.css
@@ -9,6 +9,7 @@ Author: ElsaTam (Kapirklaa in Discord)
 
 /*@forward '../shared/markdown-anchor';*/
 body {
+  --sci-fi-style-fonts: enable;
   --sci-fi-color-rgb: var(--color-cyan-rgb);
 }
 
@@ -19,7 +20,7 @@ body {
   --hr-color: rgb(var(--sci-fi-color-rgb));
 }
 
-@container style(--art-deco-style-fonts: enable) {
+@container style(--sci-fi-style-fonts: enable) {
   .sci-fi {
     --inline-title-font: "Orbitron", Arial, serif;
     --h1-font: "Orbitron", Arial, serif;
