--- a/snippets/editor/callouts/callout-fas-infobox.css
+++ b/snippets/editor/callouts/callout-fas-infobox.css
@@ -85,10 +85,12 @@ body {
 }
 .callout[data-callout=fas-infobox] .image-embed[alt~=cover] {
   position: relative;
+  display: block;
 }
 .callout[data-callout=fas-infobox] .image-embed[alt~=cover]::after {
   --triangle-size: 16px;
   content: "";
+  display: block;
   position: absolute;
   bottom: calc(-0.5 * var(--triangle-size));
   left: calc(50% - 0.5 * var(--triangle-size));
@@ -110,12 +112,20 @@ body {
   width: var(--infobox-icon-size, 70px);
   margin-top: calc(-0.5 * var(--infobox-icon-size, 70px));
   margin-bottom: calc(-0.5 * var(--infobox-icon-size, 70px));
+  z-index: 2;
+}
+.callout[data-callout=fas-infobox] p + p > .image-embed[alt~=icon] {
+  margin-top: calc(-0.5 * var(--infobox-icon-size, 70px) - var(--p-spacing));
 }
 .callout[data-callout=fas-infobox] img[alt*=icon]:not(.image-embed img) {
   display: block;
   position: relative;
+  margin-top: calc(-0.5 * var(--infobox-icon-size, 70px));
+  margin-bottom: calc(-0.5 * var(--infobox-icon-size, 70px));
+  z-index: 2;
+}
+.callout[data-callout=fas-infobox] p + p > img[alt*=icon]:not(.image-embed img) {
   margin-top: calc(-0.5 * var(--infobox-icon-size, 70px) - var(--p-spacing));
-  margin-bottom: calc(-0.5 * var(--infobox-icon-size, 70px) - var(--p-spacing));
 }
 .callout[data-callout=fas-infobox] img[alt*=icon] {
   height: var(--infobox-icon-size, 70px);
