--- a/snippets/editor/callouts/callouts-metadata.css
+++ b/snippets/editor/callouts/callouts-metadata.css
@@ -158,3 +158,7 @@ body {
   flex-grow: 1;
   text-align: center;
 }
+
+.callout[data-callout-metadata~=table-fixed] table {
+  table-layout: fixed;
+}
